# libacross

./: CMakeLists.txt  README.md  conanfile.py
doc/icons/: liblibacross.odg
ext/VS2017_Solution/: CMakeLists.txt  Dummy.cpp  OpenVSSolution.py
src/: DummyMain.cpp
src/lia/: BasicStringRef.h  IBasicString.h  ISharedPtr.h  IVector.h  VectorRef.h  defs.h
src/lia/detail/: BasicStringApiMixin.h  PopWarnings.h  PushWarnings.h  ReverseIterator.h  SharedPtrApiMixin.h  VectorApiMixin.h  VectorProxy.h
tests/: BuildTests.py  RunTests.py
tests/basics/: CMakeLists.txt
tests/basics/src/: main.cpp
tests/dll/: CMakeLists.txt  conanfile.py
tests/dll/src/lia/: testDllApi.cpp  testDllApi.h
tests/libv/: CMakeLists.txt
tests/libv/src/libv/: IApi.h  libv.cpp  libv.h
tests/suite/: CMakeLists.txt  conanfile.py
tests/suite/src/: main.cpp
tests/suite/src/lia/: DllLoader.cpp  DllLoader.h  testString.cpp  testVector.cpp
